--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,11 @@
 html {
     scroll-behavior: smooth;
   }
+
+.hero-section {
+    background-image: url('/hero-section-image.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 130vh;
+}
